--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -24,7 +24,9 @@ pipeline {
     }
     
     options{
-        ansiColor('xterm')
+        ansiColor('xterm'){
+            stage "\u001B[31mI'm Red\u001B[0m Now not"
+        }
     }
 stages {
 
@@ -69,9 +71,6 @@ stages {
 
 }
 
-def testCompleteBuilder(Map testCompleteOptions) {
-    step([$class: 'TestCompleteBuilder'] + testCompleteOptions)
-}
 
    /*
       Reads the Jenkins config file
