--- a/E2E/Traffic-BVT/.gitignore
+++ b/E2E/Traffic-BVT/.gitignore
@@ -5,3 +5,4 @@ reports
 cypress/fixtures/environment/prod-param.json
 cypress/fixtures/environment/qa-param.json
 cypress/fixtures/new-user/new-user-param.json
+cypress/fixtures/stores/actual-user-agreement.txt
