--- a/E2E/Traffic-BVT/.gitignore
+++ b/E2E/Traffic-BVT/.gitignore
@@ -6,3 +6,4 @@ cypress/fixtures/environment/prod-param.json
 cypress/fixtures/environment/qa-param.json
 cypress/fixtures/new-user/new-user-param.json
 cypress/fixtures/stores/actual-user-agreement.txt
+/cypress/downloads/downloads.htm
