--- a/E2E/Traffic-BVT/package.json
+++ b/E2E/Traffic-BVT/package.json
@@ -37,11 +37,7 @@
   },
   "dependencies": {
     "@badeball/cypress-cucumber-preprocessor": "latest",
-    "@cypress/browserify-preprocessor": "latest",
-    "chrome-aws-lambda": "^10.1.0",
-    "chrome-remote-interface": "^0.33.0",
-    "cypress-data-session": "^2.8.2",
-    "cypress-real-events": "^1.12.0"
+    "@cypress/browserify-preprocessor": "latest"
   },
   "chromeWebSecurity": false
 }
