--- a/E2E/Traffic-BVT/package.json
+++ b/E2E/Traffic-BVT/package.json
@@ -30,6 +30,7 @@
     "cypress-commands": "^3.0.0",
     "cypress-cucumber-attach-screenshots-to-failed-steps": "^1.0.0",
     "cypress-cucumber-preprocessor": "^4.3.1",
+    "cypress-file-upload": "^5.0.8",
     "cypress-on-fix": "^1.0.2",
     "cypress-testrail": "^2.7.1",
     "multiple-cucumber-html-reporter": "^3.4.0",
