--- a/E2E/Traffic-BVT/Jenkinsfile
+++ b/E2E/Traffic-BVT/Jenkinsfile
@@ -95,21 +95,21 @@ pipeline {
                     writeFile(file: TEST_RAIL_CONFIG_FILE_PATH, text: json);
                     writeFile(file: QA_CONFIG_FILE_DESTINATION, text: json);
                     writeFile(file: PROD_CONFIG_FILE_DESTINATION, text: json);
-                // mail(
-                //     subject: "${currentBuild.currentResult} ${params.PROJECTS} run for ${params.ENVIRONMENT}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
-                //     body: "${currentBuild.currentResult} ${params.PROJECTS} run for ${params.ENVIRONMENT}: Please visit  ${env.BUILD_URL} for further information.",
-                //     to: read_config_file(EMAILS_SLACK_CONTACTS).qaTeamEmail, 
-                // );
+                mail(
+                    subject: "${currentBuild.currentResult} ${params.PROJECTS} run for ${params.ENVIRONMENT}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
+                    body: "${currentBuild.currentResult} ${params.PROJECTS} run for ${params.ENVIRONMENT}: Please visit  ${env.BUILD_URL} for further information.",
+                    to: read_config_file(EMAILS_SLACK_CONTACTS).qaTeamEmail, 
+                );
                 
-                // Sends daily build results to Slack
-                // def color = 'warning'
-                //  if (currentBuild.currentResult == "FAILURE") {
-                //     color = 'danger'
-                //  } else if (currentBuild.currentResult == "SUCCESS") {
-                //     color = 'good'
-                //  }
-                // def slackChannel = read_config_file(EMAILS_SLACK_CONTACTS).agencyEbizAutobuild;
-                // slackSend channel: slackChannel, message: "${currentBuild.currentResult} ${params.PROJECTS} run for ${params.ENVIRONMENT} environment: ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)", color: color
+                Sends daily build results to Slack
+                def color = 'warning'
+                 if (currentBuild.currentResult == "FAILURE") {
+                    color = 'danger'
+                 } else if (currentBuild.currentResult == "SUCCESS") {
+                    color = 'good'
+                 }
+                def slackChannel = read_config_file(EMAILS_SLACK_CONTACTS).agencyEbizAutobuild;
+                slackSend channel: slackChannel, message: "${currentBuild.currentResult} ${params.PROJECTS} run for ${params.ENVIRONMENT} environment: ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)", color: color
                 
                 sh "cd ${CURRENT_PROJECT_PATH} && node ./cucumber-html-report.js";
             }
