--- a/E2E/Traffic-BVT/Jenkinsfile
+++ b/E2E/Traffic-BVT/Jenkinsfile
@@ -110,7 +110,7 @@ pipeline {
                     color = 'good'
                  }
                 def slackChannel = read_config_file(EMAILS_SLACK_CONTACTS).agencyEbizAutobuild;
-                slackSend channel: slackChannel, message: "${currentBuild.currentResult} ${params.TEST} run for ${params.ENVIRONMENT} environment: ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)", color: color
+                slackSend channel: slackChannel, message: "${currentBuild.currentResult} ${params.TEST} test run for ${params.ENVIRONMENT} environment: ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)", color: color
                 
                 sh "cd ${CURRENT_PROJECT_PATH} && node ./cucumber-html-report.js";
             }
