--- a/E2E/Traffic-BVT/Jenkinsfile
+++ b/E2E/Traffic-BVT/Jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
     triggers {
         parameterizedCron('''
             H 21 * * 0 %ENVIRONMENT=QA;TEST=Smoke;
-            H 22 * * 0 %ENVIRONMENT=Production';TEST=Smoke;
+            H 22 * * 0 %ENVIRONMENT=Production;TEST=Smoke;
         ''')
     }
     stages {
