--- a/E2E/ARFP-Stratasphere/.gitignore
+++ b/E2E/ARFP-Stratasphere/.gitignore
@@ -5,6 +5,7 @@ reports
 cypress/fixtures/agencyRFP/parsed-xlsx-from-response-screen.json
 cypress/fixtures/agencyRFP/ui-table-from-response-screen.json
 cypress/downloads/Chicago - TV.prx
+cypress/downloads/downloads.htm
 cypress/downloads/Linear response detail.xlsx
 cypress/fixtures/environment/prod-param.json
 cypress/fixtures/environment/qa-param.json
