--- a/E2E/ARFP-Stratasphere/package.json
+++ b/E2E/ARFP-Stratasphere/package.json
@@ -50,9 +50,12 @@
     "cypress-testrail": "^2.10.0",
     "dotenv": "^16.4.5",
     "esbuild": "^0.20.2",
+    "gmail-tester": "^1.3.8",
+    "gmail-tester-extended": "^1.1.2",
     "multiple-cucumber-html-reporter": "^3.6.2",
     "neat-csv": "7.0.0",
     "node-xlsx": "^0.24.0",
+    "nodemailer": "^6.9.13",
     "xlsx": "^0.18.5"
   },
   "dependencies": {
