Finished line negotiation

--- a/E2E/ARFP-Stratasphere/.gitignore
+++ b/E2E/ARFP-Stratasphere/.gitignore
@@ -9,6 +9,6 @@ cypress/downloads/downloads.htm
 cypress/downloads/Linear response detail.xlsx
 cypress/fixtures/environment/*.json
 cypress/fixtures/gmail-data/client-secrets/qa-environment/*.json
+cypress/fixtures/gmail-data/client-secrets/prod-environment/*.json
 cypress/fixtures/gmail-data/gmail-info/*
 cypress/fixtures/agencyRFP/new-frp-name.json
-/cypress/fixtures/agencyRFP/new-frp-name.json
