--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -12,6 +12,11 @@ def QA_ARFP_GMAIL_TOKEN_ID = '35f198df-dd05-428b-aee4-791ae062328e';
 def QA_SSPHERE_GMAIL_CREDENTIALS_ID = '9bc10f95-6d44-4f34-80fe-e76bb167b9a8';
 def QA_SSPHERE_GMAIL_TOKEN_ID = 'bed5c51f-2bbd-404a-899e-3dc864d4442f';
 
+def UAT_ARFP_GMAIL_CREDENTIALS_ID = '29d743f1-0e58-4bb1-b04d-dfbe2f7f79d8';
+def UAT_ARFP_GMAIL_TOKEN_ID = 'd9e342ab-5464-42cd-9d93-5c1db7c5d9f3';
+def UAT_SSPHERE_GMAIL_CREDENTIALS_ID = '57fe633a-ea69-44de-8322-8bc705fa9332';
+def UAT_SSPHERE_GMAIL_TOKEN_ID = 'bb5e457e-bef5-4a87-83f4-936df7a1c85d';
+
 def PROD_ARFP_GMAIL_CREDENTIALS_ID = '8b27df77-7989-498b-9a59-9e3b417777e6';
 def PROD_ARFP_GMAIL_TOKEN_ID = '344cddea-4dd2-4626-8901-01172620eb96';
 def PROD_SSPHERE_GMAIL_CREDENTIALS_ID = 'f12eeccf-0cbc-4732-86b9-4b7699c45cbd';
@@ -21,6 +26,11 @@ def QA_ARFP_GMAIL_CREDENTIALS_DESTINATION = 'E2E/ARFP-Stratasphere/cypress/fixtu
 def QA_ARFP_GMAIL_TOKEN_DESTINATION = 'E2E/ARFP-Stratasphere/cypress/fixtures/gmail-data/client-secrets/qa-environment/token-arfp.testqa.json';
 def QA_SSPHERE_GMAIL_CREDENTIALS_DESTINATION = 'E2E/ARFP-Stratasphere/cypress/fixtures/gmail-data/client-secrets/qa-environment/credentials-ssphere.testqa.json';
 def QA_SSPHERE_GMAIL_TOKEN_DESTINATION = 'E2E/ARFP-Stratasphere/cypress/fixtures/gmail-data/client-secrets/qa-environment/token-ssphere.testqa.json';
+
+def UAT_ARFP_GMAIL_CREDENTIALS_DESTINATION = 'E2E/ARFP-Stratasphere/cypress/fixtures/gmail-data/client-secrets/uat-environment/credentials-arfp.testuat.json';
+def UAT_ARFP_GMAIL_TOKEN_DESTINATION = 'E2E/ARFP-Stratasphere/cypress/fixtures/gmail-data/client-secrets/uat-environment/token-arfp.testuat.json';
+def UAT_SSPHERE_GMAIL_CREDENTIALS_DESTINATION = 'E2E/ARFP-Stratasphere/cypress/fixtures/gmail-data/client-secrets/uat-environment/credentials-ssphere.testuat.json';
+def UAT_SSPHERE_GMAIL_TOKEN_DESTINATION = 'E2E/ARFP-Stratasphere/cypress/fixtures/gmail-data/client-secrets/uat-environment/token-ssphere.testuat.json';
 
 def PROD_ARFP_GMAIL_CREDENTIALS_DESTINATION = 'E2E/ARFP-Stratasphere/cypress/fixtures/gmail-data/client-secrets/prod-environment/credentials-arfp.testprod.json';
 def PROD_ARFP_GMAIL_TOKEN_DESTINATION = 'E2E/ARFP-Stratasphere/cypress/fixtures/gmail-data/client-secrets/prod-environment/token-arfp.testprod.json';
@@ -77,6 +87,10 @@ pipeline {
                         inject_config_file(QA_SSPHERE_GMAIL_TOKEN_ID , QA_SSPHERE_GMAIL_TOKEN_DESTINATION);
                     } else if (params.ENVIRONMENT == 'UAT'){
                         inject_config_file(UAT_CONFIG_FILE_ID, UAT_CONFIG_FILE_DESTINATION);
+                        inject_config_file(UAT_ARFP_GMAIL_CREDENTIALS_ID, UAT_ARFP_GMAIL_CREDENTIALS_DESTINATION);
+                        inject_config_file(UAT_ARFP_GMAIL_TOKEN_ID, UAT_ARFP_GMAIL_TOKEN_DESTINATION);
+                        inject_config_file(UAT_SSPHERE_GMAIL_CREDENTIALS_ID, UAT_SSPHERE_GMAIL_CREDENTIALS_DESTINATION);
+                        inject_config_file(UAT_SSPHERE_GMAIL_TOKEN_ID , UAT_SSPHERE_GMAIL_TOKEN_DESTINATION);
                     };
     
                         // Copy paste Test Rail Credentials from Jenkins to current project
