[NO JIRA] - Printing input parameters on first step.

--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -68,6 +68,13 @@ pipeline {
         ''')
     }
     stages {
+        stage('Print Parameters & Environment Variables'){
+            steps {
+                echo "ENVIRONMENT = ${params.ENVIRONMENT}"
+                echo "PROJECTS = ${params.PROJECTS}"
+                echo "VERSION = ${params.VERSION}"
+            }
+        }
         stage('Config file setup'){
             steps {
                 script {
