--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -55,7 +55,7 @@ pipeline {
     parameters{
         choice(name: 'ENVIRONMENT', choices: ['Production', 'QA', 'UAT'], description: "Choose the Environment to run");
         choice(name: 'PROJECTS', choices: ['Stratasphere', 'ARFP', 'WIP'], description: "Choose the Project to run");
-        string(name: 'VERSION',defaultValue: '9.1.0',  trim: true, description: "When ARFP project is selected, input Agency RFP version (Production and QA versions may vary)");
+        string(name: 'VERSION',defaultValue: 'v 9.1.0',  trim: true, description: "When ARFP project is selected, input Agency RFP version (Production and QA versions may vary)");
     }
     options{
         ansiColor('xterm')
