--- a/E2E/ePort/.vscode/settings.json
+++ b/E2E/ePort/.vscode/settings.json
@@ -11,5 +11,6 @@
     "cucumberautocomplete.syncfeatures": "cypress/integration/step-definitions/**/*.feature",
     "cSpell.words": [
         "badeball",
+        "makegoods"
     ]
 }
