--- a/E2E/ePort/.vscode/settings.json
+++ b/E2E/ePort/.vscode/settings.json
@@ -11,6 +11,7 @@
     "cucumberautocomplete.syncfeatures": "cypress/integration/step-definitions/**/*.feature",
     "cSpell.words": [
         "badeball",
+        "Creds",
         "makegoods"
     ]
 }
