--- a/E2E/ePort/Jenkinsfile
+++ b/E2E/ePort/Jenkinsfile
@@ -1,27 +1,9 @@
-#!/usr/bin/env groovy
-import groovy.json.*
-
-def CURRENT_PROJECT_PATH = 'E2E/ePort'
-def PROD_CONFIG_FILE_ID = '1ad0b80a-404d-45ac-81b1-71cd259794d1'
-def QA_CONFIG_FILE_ID = '2a6e4dde-90fd-4b33-870c-94e1ac74261e'
-def UAT_CONFIG_FILE_ID = '10596465-25c2-4869-93fe-1b8c63a3dec6'
-def EMAILS_SLACK_CONTACTS = '72f4f5fc-2d3c-415d-891d-943c990e74a1'
-
-def PROD_CONFIG_FILE_DESTINATION = 'E2E/ePort/cypress/fixtures/environment/prod-param.json'
-def QA_CONFIG_FILE_DESTINATION = 'E2E/ePort/cypress/fixtures/environment/qa-param.json'
-def UAT_CONFIG_FILE_DESTINATION = 'E2E/ePort/cypress/fixtures/environment/uat-param.json'
-
-def CONFIG_FILE_PATH = 'E2E/ePort/cypress/fixtures/test-complete/session-creator-jenkins-creds.json'
-
 pipeline {
     agent {
         label 'testexecute'
     }
     tools {
         nodejs '20'
-    }
-    environment {
-        CYPRESS_CACHE_FOLDER = "${env.WORKSPACE}/.cache/Cypress"
     }
     options {
         ansiColor('xterm')
@@ -84,7 +66,7 @@ pipeline {
                 cd ${CURRENT_PROJECT_PATH} && \
                 npm cache clean --force && \
                 npm ci --prefer-offline && \
-                npx cypress run --browser chrome --env TC="SessionCreator"
+                npx cypress run --browser chrome --env TC="SessionCreator" --config video=false --headless --spec 'cypress/integration/**/**/*.feature' --reporter cypress-mochawesome-reporter --reporter-options reportDir=cypress/reports/mochawesome-report,reportFilename=index.html,overwrite=false,html=false,json=true --config defaultCommandTimeout=60000,pageLoadTimeout=120000
                 """
                 echo 'Finished test'
             }
@@ -178,8 +160,8 @@ def inject_config_file(String configFileId, String destinationFilePath) {
 */ 
 def read_config_file(String configFileId){
     configFileProvider([configFile(fileId: configFileId, variable: 'configFile')]) {
-        def fileContent = readFile configFile
-        def jsonFileContent = readJSON text: fileContent
-        return jsonFileContent
+        def fileContent = readFile configFile;
+        def jsonFileContent = readJSON text: fileContent;
+        return jsonFileContent;
     } 
 }
