--- a/E2E/ePort/package.json
+++ b/E2E/ePort/package.json
@@ -25,6 +25,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/helper-compilation-targets": "^7.23.6",
+    "@babel/plugin-transform-class-properties": "^7.24.7",
     "@cypress/browserify-preprocessor": "^3.0.2",
     "cypress": "^13.13.1",
     "cypress-cucumber-preprocessor": "^4.3.1",
