--- a/E2E/ePort/Jenkinsfile
+++ b/E2E/ePort/Jenkinsfile
@@ -21,9 +21,9 @@ pipeline {
     tools {
         nodejs '18'
     }
-    options {
-        ansiColor('xterm')
-    }
+    // options {
+    //     ansiColor('xterm')
+    // }
 
     stages {
         stage('Cleanup') {
@@ -148,7 +148,7 @@ pipeline {
                 echo 'Running Cypress tests...'
                 bat """
                 cd ${CURRENT_PROJECT_PATH} && \
-                npx cypress run --headless"
+                npx cypress run --headless --env TC="SessionCreator"
                 """
             }
         }
