--- a/E2E/ePort/.gitignore
+++ b/E2E/ePort/.gitignore
@@ -2,5 +2,5 @@ node_modules
 screenshots
 videos
 reports
-cypress/fixtures/environment/*.json
+#cypress/fixtures/environment/*.json
 /cypress/fixtures/sbms-estimate/estimate-number.txt
